# fastchat-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.example.json  fastchat.config.example.json  local.py  pyproject.toml  readme.md  requirements.txt  root_testing.py  setup.py
doc/: API_WEBSOCKET.md  CHANGELOG.md  CLEANUP_IMPLEMENTATION.md  USAGE.md
examples/custom_api/: api.py
src/: local.py  mount_api.py
src/config/: llm_config.py
src/fastchat/: __init__.py  dev.py
src/fastchat/api/: api.py
src/fastchat/api/routes/: chat.py
src/fastchat/app/: environment.py
src/fastchat/app/chat/: chat.py  message.py  step.py
src/fastchat/app/client_db/: client_db.py
src/fastchat/app/mcp_manager/: client.py  servers.py
src/fastchat/app/mcp_manager/connections/: httpstrem.py  services.py  session_data.py
src/fastchat/app/mcp_manager/services/: __init__.py  service.py
src/fastchat/app/mcp_manager/sessions/: httpstrem.py  stdio.py
src/fastchat/app/services/llm/: llm.py  message.py
src/fastchat/config/: auth_api.py  llm_config.py  logger.py
src/fastchat/local/: local_chat.py
src/fastchat/utils/: print_terminal.py
src/fastmcpclient/mcp_manager/: servers.py
src/fastmcpclient/mcp_manager/connections/: session_data.py
src/fastmcpclient/services/llm/: client_llm.py
src/fastmcpclient/services/llm/prompts/: system_prompts.py  user_prompts.py
src/mcp_manager/: client.py  servers.py
src/mcp_manager/connections/: call_tool.py  read_resource.py  session_data.py
src/mcp_manager/services/: service.py
src/mcpclient/: __init__.py  dev.py
src/mcpclient/app/chat/: chat.py
src/mcpclient/app/mcp_manager/: client.py  servers.py
src/mcpclient/config/: logger.py
src/mcpclient/mcp_manager/: client.py  servers.py
src/mcpclient/mcp_manager/connections/: call_tool.py  read_resource.py  session_data.py
src/mcpclient/mcp_manager/services/: service.py
src/mcpclient/services/llm/: client_llm.py  llm.py
src/mcpclient/services/llm/chat/: chat.py  step.py
src/mcpclient/services/llm/prompts/: system_prompts.py  user_prompts.py
src/mcpclient/services/llm/steps/: step.py
src/services/llm/: llm.py
src/services/llm/models/openai_service/: gpt.py
src/services/llm/open_ai/: gpt.py
src/services/llm/openai_service/: gpt.py
src/services/llm/prompts/: system_prompts.py  user_prompts.py
tests/api/websocket/: chating.py
(+9 files in other folders)
